bindings.h

// NOTE: Append the lines below to ios/Classes/<your>Plugin.h

char *rust_greeting(const char *to);

void rust_cstr_free(char *s);

char *init(char *path);

char *is_png_size_work_done(void);

char *get_png_size(void);